2007-03-07  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.18.modules: fixed a typo from my previous
	commit (revision, not revosion). Thanks Phil.

2007-03-07  Phil Cowans  <pjc51@cam.ac.uk>

	* modulesets/gnome-2.18.modules: Dasher branched for 2.18.

2007-03-07  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.18.modules: tomboy and glade3 have branched 
	to gnome-2-18.

2007-03-06  Elijah Newren  <newren gmail com>

	* modulesets/freedesktop-2.18.modules: updated cairo to 1.4.0.

2007-03-04  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/freedesktop-2.18.modules: avahi: Added the --disable-python 
	option, because it would then need python-gdbm, which is not installed in the 
	jhbuild (boostrapped) python. Alternatively, someone might want to add that 
	to jhbuild instead.  (Later edit by Elijah: actually, it is installed
	by jhbuild bootstrapped python, _if_ you have gdbm-devel installed at
	the time you build python.  But yeah, this bug snags lots of people so
	the change seems sane to me.)
	* modulesets/gnome-2.18.modules: Glom: Depend on gnome-doc-utils.

2007-03-04  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: orca has branched to gnome-2-18.

2007-03-04  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: gnome-mag branch changed name.

2007-03-04  Christian Kirbach  <Christian.Kirbach@googlemail.com>

	* modulesets/gnome-2.18.modules: gnome-power-manager has branched to
	  gnome-2-18

2007-03-04  Christian Kirbach  <Christian.Kirbach@googlemail.com>

	* modulesets/gnome-2.18.modules: gnome-mag has branched to
	  gnome_2_18

2007-03-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/jhbuild.xml:
	  Update documentation to note that a) we use repos now to override
	  checkout locations and b) GNOME uses SVN

2007-03-04  Frederic Peters  <fpeters@0d.be>

	* jhbuild/config.py: added makedistcheck variable, which was
	forgotten (closes: #414377)
	 