@@ -72,3 +72,6 @@ pretty_print = True
 
 # program to use for subversion support (supports svn or bzr)
 svn_program = 'svn'
+
+# whether not to emit notifications through the notification daemon
+nonotify = False
