@@ -1,3 +1,10 @@
+2007-03-08  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/utils/notify.py, jhbuild/frontends/terminal.py,
+	jhbuild/config.py, jhbuild/defaults.jhbuildrc: added call to
+	notification daemon on errors (closes: #415895, patch by Mariano
+	Suárez-Alvarez); can be disabled through nonotify config option.
+
 2007-03-07  Luca Ferretti  <elle.uca@libero.it>
 
 	* modulesets/gnome-2.18.modules: fixed a typo from my previous
